force-app/main/default/objects/Event_Throttling_Queue__c/Event_Throttling_Queue__c.object-meta.xml
<CustomObject>
    <label>Event Throttling Queue</label>
    <nameField>
        <displayFormat>TQ-{00000}</displayFormat>
        <label>Event Throttling Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Throttling Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>