force-app/main/default/objects/Event_Throttling_Queue__c/fields/Async_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_Id__c</fullName>
    <description>Queueable Job</description>
    <label>Async Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>