force-app/main/default/objects/Event_Throttling_Queue__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>The type of the notification.</description>
    <externalId>true</externalId>
    <label>Event Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>