force-app/main/default/objects/Event_Throttling_Queue__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Batch Transaction Id generated for the throttling queue.</description>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>